# MAA-Meow

./: README.md  gradle.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/aliothmoon/maameow/: MaaApplication.kt
app/src/main/java/com/aliothmoon/maameow/constant/: MaaApi.kt  Routes.kt
app/src/main/java/com/aliothmoon/maameow/data/datasource/: AppDownloader.kt
app/src/main/java/com/aliothmoon/maameow/data/model/: FightConfig.kt  RecruitConfig.kt  TaskProfile.kt
app/src/main/java/com/aliothmoon/maameow/data/notification/: NotificationSettings.kt
app/src/main/java/com/aliothmoon/maameow/data/permission/: PermissionState.kt
app/src/main/java/com/aliothmoon/maameow/koin/: AppModule.kt  ViewModelModule.kt
app/src/main/java/com/aliothmoon/maameow/maa/task/: MaaTaskType.kt
app/src/main/java/com/aliothmoon/maameow/manager/: PermissionManager.kt  RemoteAccessCoordinator.kt  RemoteAccessPermissionBackend.kt  RemoteAccessState.kt  RemoteServiceManager.kt  RootManager.kt  RootRemoteServiceConnector.kt  ShizukuManager.kt
app/src/main/java/com/aliothmoon/maameow/overlay/: OverlayController.kt
app/src/main/java/com/aliothmoon/maameow/remote/: RemoteServiceImpl.kt
app/src/main/java/com/aliothmoon/maameow/root/: RootServiceBootstrapProvider.kt  RootServiceBootstrapRegistry.kt  RootServiceStarter.java
app/src/main/java/com/aliothmoon/maameow/theme/: MaaTheme.kt  Theme.kt
app/src/main/native/: CMakeLists.txt  bridge.cpp  bridge.h  launcher.c  misc.cpp
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
(+98 files in other folders)
